cmake_minimum_required(VERSION 3.7)
project(seqan)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        align/align_base.h
        align/align_cols.h
        align/align_config.h
        align/align_interface_wrapper.h
        align/align_iterator_base.h
        align/align_metafunctions.h
        align/align_traceback.h
        align/alignment_algorithm_tags.h
        align/alignment_operations.h
        align/dp_algorithm_impl.h
        align/dp_align_simd_helper.h
        align/dp_band.h
        align/dp_cell.h
        align/dp_cell_affine.h
        align/dp_cell_dynamic.h
        align/dp_cell_linear.h
        align/dp_context.h
        align/dp_formula.h
        align/dp_formula_affine.h
        align/dp_formula_dynamic.h
        align/dp_formula_linear.h
        align/dp_matrix.h
        align/dp_matrix_navigator.h
        align/dp_matrix_navigator_score_matrix.h
        align/dp_matrix_navigator_score_matrix_sparse.h
        align/dp_matrix_navigator_trace_matrix.h
        align/dp_matrix_sparse.h
        align/dp_meta_info.h
        align/dp_profile.h
        align/dp_scout.h
        align/dp_scout_simd.h
        align/dp_setup.h
        align/dp_trace_segment.h
        align/dp_traceback_adaptor.h
        align/dp_traceback_impl.h
        align/evaluate_alignment.h
        align/fragment.h
        align/gap_anchor.h
        align/gapped_value_type.h
        align/gaps_anchor.h
        align/gaps_array.h
        align/gaps_base.h
        align/gaps_iterator_anchor.h
        align/gaps_iterator_array.h
        align/gaps_iterator_base.h
        align/global_alignment_banded.h
        align/global_alignment_hirschberg_impl.h
        align/global_alignment_myers_hirschberg_impl.h
        align/global_alignment_myers_impl.h
        align/global_alignment_specialized.h
        align/global_alignment_unbanded.h
        align/local_alignment_banded.h
        align/local_alignment_banded_waterman_eggert_impl.h
        align/local_alignment_enumeration.h
        align/local_alignment_enumeration_banded.h
        align/local_alignment_enumeration_unbanded.h
        align/local_alignment_unbanded.h
        align/local_alignment_waterman_eggert_impl.h
        align/matrix_base.h
        align_extend/align_extend.h
        align_extend/align_extend_base.h
        align_extend/dp_scout_xdrop.h
        align_profile/add_to_profile.h
        align_profile/score_profile_seq.h
        align_split/align_split_interface.h
        align_split/dp_scout_split.h
        alignment_free/af_d2.h
        alignment_free/af_d2star.h
        alignment_free/af_d2z.h
        alignment_free/af_n2.h
        alignment_free/alignment_free_base.h
        alignment_free/alignment_free_comparison.h
        alignment_free/kmer_functions.h
        arg_parse/arg_parse_argument.h
        arg_parse/arg_parse_ctd_support.h
        arg_parse/arg_parse_doc.h
        arg_parse/arg_parse_exceptions.h
        arg_parse/arg_parse_option.h
        arg_parse/arg_parse_parse.h
        arg_parse/arg_parse_type_support.h
        arg_parse/arg_parse_version_check.h
        arg_parse/argument_parser.h
        arg_parse/tool_doc.h
        arg_parse/xml_support.h
        bam_io/bam_alignment_record.h
        bam_io/bam_alignment_record_util.h
        bam_io/bam_file.h
        bam_io/bam_header_record.h
        bam_io/bam_index_bai.h
        bam_io/bam_io_context.h
        bam_io/bam_sam_conversion.h
        bam_io/bam_scanner_cache.h
        bam_io/bam_tags_dict.h
        bam_io/cigar.h
        bam_io/read_bam.h
        bam_io/read_sam.h
        bam_io/write_bam.h
        bam_io/write_sam.h
        basic/aggregate_concept.h
        basic/allocator_chunkpool.h
        basic/allocator_interface.h
        basic/allocator_multipool.h
        basic/allocator_simple.h
        basic/allocator_singlepool.h
        basic/allocator_to_std.h
        basic/alphabet_adapt_builtins.h
        basic/alphabet_bio.h
        basic/alphabet_concept.h
        basic/alphabet_math.h
        basic/alphabet_profile.h
        basic/alphabet_qualities.h
        basic/alphabet_residue.h
        basic/alphabet_residue_funcs.h
        basic/alphabet_residue_tabs.h
        basic/alphabet_simple_type.h
        basic/alphabet_storage.h
        basic/array_construct_destruct.h
        basic/basic_aggregate.h
        basic/basic_allocator.h
        basic/basic_alphabet.h
        basic/basic_concept.h
        basic/basic_container.h
        basic/basic_debug.h
        basic/basic_device.h
        basic/basic_exception.h
        basic/basic_functors.h
        basic/basic_fundamental.h
        basic/basic_iterator.h
        basic/basic_math.h
        basic/basic_metaprogramming.h
        basic/basic_parallelism.h
        basic/basic_proxy.h
        basic/basic_simd_vector.h
        basic/basic_smart_pointer.h
        basic/basic_stream.h
        basic/basic_tangle.h
        basic/basic_type.h
        basic/basic_view.h
        basic/boost_preprocessor_subset.h
        basic/builtin_functions.h
        basic/concept_checking.h
        basic/container_concept.h
        basic/debug_helper.h
        basic/debug_test_system.h
        basic/fundamental_chunking.h
        basic/fundamental_comparison.h
        basic/fundamental_concepts.h
        basic/fundamental_conversion.h
        basic/fundamental_metafunctions.h
        basic/fundamental_tags.h
        basic/fundamental_transport.h
        basic/holder_base.h
        basic/holder_simple.h
        basic/holder_tristate.h
        basic/hosted_type_interface.h
        basic/iterator_adapt_pointer.h
        basic/iterator_adapt_std.h
        basic/iterator_adaptor.h
        basic/iterator_base.h
        basic/iterator_concept.h
        basic/iterator_counting.h
        basic/iterator_interface.h
        basic/iterator_position.h
        basic/iterator_range.h
        basic/iterator_zip.h
        basic/macro_deprecated.h
        basic/math_functions.h
        basic/math_log_space_value.h
        basic/metaprogramming_control.h
        basic/metaprogramming_enable_if.h
        basic/metaprogramming_logic.h
        basic/metaprogramming_math.h
        basic/metaprogramming_type.h
        basic/metaprogramming_type_algebra.h
        basic/pair_base.h
        basic/pair_bit_compressed.h
        basic/pair_packed.h
        basic/profiling.h
        basic/property_map_concept.h
        basic/proxy_base.h
        basic/proxy_iterator.h
        basic/test_system.h
        basic/triple_base.h
        basic/triple_packed.h
        basic/tuple_base.h
        basic/tuple_bit_compressed.h
        basic/volatile_ptr.h
        bed_io/bed_file.h
        bed_io/bed_record.h
        bed_io/read_bed.h
        bed_io/write_bed.h
        blast/blast_base.h
        blast/blast_io_context.h
        blast/blast_record.h
        blast/blast_report_out.h
        blast/blast_statistics.h
        blast/blast_tabular.h
        blast/blast_tabular_in.h
        blast/blast_tabular_lowlevel.h
        blast/blast_tabular_out.h
        consensus/consensus_aligner.h
        consensus/consensus_aligner_interface.h
        consensus/consensus_alignment_options.h
        consensus/consensus_base.h
        consensus/consensus_builder.h
        consensus/consensus_library.h
        consensus/consensus_realign.h
        consensus/consensus_score.h
        consensus/overlap_info_computation.h
        consensus/overlapper.h
        file/file_base.h
        file/file_cstyle.h
        file/file_forwards.h
        file/file_interface.h
        file/file_mapping.h
        file/file_page.h
        file/string_external.h
        file/string_mmap.h
        find/find_abndm.h
        find/find_ahocorasick.h
        find/find_base.h
        find/find_begin.h
        find/find_bndm.h
        find/find_bom.h
        find/find_hamming_simple.h
        find/find_horspool.h
        find/find_lambda.h
        find/find_multi.h
        find/find_multiple_bfam.h
        find/find_multiple_shiftand.h
        find/find_myers_ukkonen.h
        find/find_pattern_base.h
        find/find_pex.h
        find/find_score.h
        find/find_set_horspool.h
        find/find_shiftand.h
        find/find_shiftor.h
        find/find_simple.h
        find/find_wild_shiftand.h
        find/find_wumanber.h
        gff_io/gff_file.h
        gff_io/gff_io_base.h
        graph_algorithms/all_pairs_shortest_path.h
        graph_algorithms/bellman_ford.h
        graph_algorithms/bipartite_matching.h
        graph_algorithms/breadth_first_search.h
        graph_algorithms/connected_components.h
        graph_algorithms/depth_first_search.h
        graph_algorithms/dijkstra.h
        graph_algorithms/floyd_warshall.h
        graph_algorithms/ford_fulkerson.h
        graph_algorithms/graph_algorithm_heap_tree.h
        graph_algorithms/graph_algorithm_hmm.h
        graph_algorithms/graph_algorithm_lis_his.h
        graph_algorithms/kruskal.h
        graph_algorithms/path_growing.h
        graph_algorithms/prim.h
        graph_algorithms/single_source_shortest_path.h
        graph_algorithms/strongly_connected_compnents.h
        graph_algorithms/topological_sort.h
        graph_algorithms/transitive_closure.h
        graph_algorithms/weakly_connected_components.h
        graph_algorithms/weighted_bipartite_matching.h
        graph_align/graph_algorithm_refine_align.h
        graph_align/graph_algorithm_refine_aligngraph.h
        graph_align/graph_algorithm_refine_annotation.h
        graph_align/graph_algorithm_refine_exact.h
        graph_align/graph_algorithm_refine_exact_iterative.h
        graph_align/graph_algorithm_refine_fragment.h
        graph_align/graph_algorithm_refine_inexact.h
        graph_align/graph_algorithm_refine_scoring.h
        graph_align/graph_impl_align.h
        graph_align/graph_impl_align_adapt.h
        graph_msa/graph_align_tcoffee_base.h
        graph_msa/graph_align_tcoffee_distance.h
        graph_msa/graph_align_tcoffee_guidetree.h
        graph_msa/graph_align_tcoffee_io.h
        graph_msa/graph_align_tcoffee_kmer.h
        graph_msa/graph_align_tcoffee_library.h
        graph_msa/graph_align_tcoffee_msa.h
        graph_msa/graph_align_tcoffee_progressive.h
        graph_msa/graph_align_tcoffee_refinement.h
        graph_types/graph_base.h
        graph_types/graph_drawing.h
        graph_types/graph_edgestump.h
        graph_types/graph_idmanager.h
        graph_types/graph_impl_automaton.h
        graph_types/graph_impl_directed.h
        graph_types/graph_impl_hmm.h
        graph_types/graph_impl_oracle.h
        graph_types/graph_impl_tree.h
        graph_types/graph_impl_trie.h
        graph_types/graph_impl_undirected.h
        graph_types/graph_impl_wordgraph.h
        graph_types/graph_interface.h
        graph_types/graph_iterator.h
        graph_types/graph_iterator_adjacency.h
        graph_types/graph_iterator_bfs.h
        graph_types/graph_iterator_dfs.h
        graph_types/graph_iterator_edge.h
        graph_types/graph_iterator_outedge.h
        graph_types/graph_iterator_vertex.h
        graph_types/graph_utility_parsing.h
        graph_types/property_map_generic.h
        graph_types/property_map_internal.h
        graph_types/property_map_internal_pointer.h
        index/find2_backtracking.h
        index/find2_base.h
        index/find2_functors.h
        index/find2_index.h
        index/find2_index_multi.h
        index/find2_vstree_factory.h
        index/find_backtracking.h
        index/find_index.h
        index/find_index_approx.h
        index/find_index_binary.h
        index/find_index_esa.h
        index/find_index_lambda.h
        index/find_index_qgram.h
        index/find_pigeonhole.h
        index/find_quasar.h
        index/find_swift.h
        index/index_base.h
        index/index_bidirectional.h
        index/index_bidirectional_stree.h
        index/index_bifm.h
        index/index_bifm_stree.h
        index/index_bwt.h
        index/index_childtab.h
        index/index_device.h
        index/index_dfi.h
        index/index_esa_algs.h
        index/index_esa_algs_multi.h
        index/index_esa_base.h
        index/index_esa_drawing.h
        index/index_esa_stree.h
        index/index_fm.h
        index/index_fm_compressed_sa.h
        index/index_fm_compressed_sa_iterator.h
        index/index_fm_dox.h
        index/index_fm_lf_table.h
        index/index_fm_rank_dictionary_base.h
        index/index_fm_rank_dictionary_levels.h
        index/index_fm_rank_dictionary_naive.h
        index/index_fm_rank_dictionary_wt.h
        index/index_fm_right_array_binary_tree.h
        index/index_fm_right_array_binary_tree_iterator.h
        index/index_fm_sparse_string.h
        index/index_fm_stree.h
        index/index_forwards.h
        index/index_lcp.h
        index/index_lcp_tree.h
        index/index_pizzachili.h
        index/index_pizzachili_find.h
        index/index_pizzachili_string.h
        index/index_qgram.h
        index/index_qgram_bucketrefinement.h
        index/index_qgram_openaddressing.h
        index/index_qgram_stree.h
        index/index_sa_btree.h
        index/index_sa_bwtwalk.h
        index/index_sa_lss.h
        index/index_sa_mm.h
        index/index_sa_qsort.h
        index/index_sa_stree.h
        index/index_sa_truncated.h
        index/index_shawarma.h
        index/index_shims.h
        index/index_skew3.h
        index/index_skew7.h
        index/index_skew7_multi.h
        index/index_view.h
        index/index_wotd.h
        index/pipe_merger3.h
        index/pipe_merger7.h
        index/pizzachili_api.h
        index/pump_extender3.h
        index/pump_extender7.h
        index/pump_lcp_core.h
        index/pump_separator7.h
        index/radix.h
        index/repeat_base.h
        index/shape_base.h
        index/shape_gapped.h
        index/shape_minimizer.h
        index/shape_onegapped.h
        index/shape_predefined.h
        index/shape_threshold.h
        journaled_set/journal_alignment_interface.h
        journaled_set/journal_alignment_traceback_adaptor.h
        journaled_set/journaled_set_base.h
        journaled_set/journaled_set_impl.h
        journaled_set/journaled_set_join.h
        journaled_set/journaled_set_join_config.h
        journaled_set/journaled_set_join_global_align_compact.h
        journaled_set/journaled_set_join_global_align_manhatten.h
        journaled_set/journaled_set_journal_trace_descriptor.h
        journaled_set/score_biaffine.h
        journaled_string_tree/delta_map.h
        journaled_string_tree/delta_map_entry.h
        journaled_string_tree/delta_map_iterator.h
        journaled_string_tree/delta_store.h
        journaled_string_tree/journaled_string_tree_base.h
        journaled_string_tree/journaled_string_tree_impl.h
        journaled_string_tree/journaled_string_tree_sequence_buffer.h
        journaled_string_tree/journaled_string_tree_traverser.h
        journaled_string_tree/journaled_string_tree_traverser_node.h
        journaled_string_tree/journaled_string_tree_traverser_util.h
        journaled_string_tree/jst_extension_base.h
        journaled_string_tree/jst_extension_horspool.h
        journaled_string_tree/jst_extension_myers_ukkonen.h
        journaled_string_tree/jst_extension_shiftand.h
        journaled_string_tree/jst_extension_shiftor.h
        journaled_string_tree/observable.h
        journaled_string_tree/stack_observer.h
        map/map_adapter_stl.h
        map/map_base.h
        map/map_chooser.h
        map/map_skiplist.h
        map/map_vector.h
        map/sumlist.h
        map/sumlist_mini.h
        map/sumlist_skip.h
        math/math_common_factor.h
        math/math_operators.h
        math/math_rational.h
        misc/accumulators.h
        misc/base.h
        misc/bit_twiddling.h
        misc/bit_twiddling_functors.h
        misc/dequeue.h
        misc/edit_environment.h
        misc/interval_tree.h
        misc/map.h
        misc/memset.h
        misc/name_store_cache.h
        misc/priority_type_base.h
        misc/priority_type_heap.h
        misc/set.h
        misc/svg.h
        misc/terminal.h
        misc/union_find.h
        modifier/cyclic_shape.h
        modifier/modifier_alphabet.h
        modifier/modifier_alphabet_expansion.h
        modifier/modifier_cyclic_shape.h
        modifier/modifier_functors.h
        modifier/modifier_iterator.h
        modifier/modifier_padding.h
        modifier/modifier_position.h
        modifier/modifier_reverse.h
        modifier/modifier_shortcuts.h
        modifier/modifier_string.h
        modifier/modifier_view.h
        parallel/parallel_algorithms.h
        parallel/parallel_atomic_misc.h
        parallel/parallel_atomic_primitives.h
        parallel/parallel_lock.h
        parallel/parallel_macros.h
        parallel/parallel_queue.h
        parallel/parallel_queue_suspendable.h
        parallel/parallel_resource_pool.h
        parallel/parallel_sequence.h
        parallel/parallel_serializer.h
        parallel/parallel_splitting.h
        parallel/parallel_tags.h
        parse_lm/local_match_store.h
        parse_lm/parse_blastn_tabular.h
        parse_lm/parse_lastz_general.h
        parse_lm/parse_stellar_gff.h
        pipe/pipe_base.h
        pipe/pipe_caster.h
        pipe/pipe_counter.h
        pipe/pipe_echoer.h
        pipe/pipe_edit_environment.h
        pipe/pipe_filter.h
        pipe/pipe_iterator.h
        pipe/pipe_joiner.h
        pipe/pipe_namer.h
        pipe/pipe_sampler.h
        pipe/pipe_shifter.h
        pipe/pipe_source.h
        pipe/pipe_tupler.h
        pipe/pool_base.h
        pipe/pool_mapper.h
        pipe/pool_sorter.h
        random/random_base.h
        random/random_beta.h
        random/random_util.h
        realign/realign_base.h
        realign/realign_helper_functions.h
        reduced_aminoacid/reduced_aminoacid_base.h
        reduced_aminoacid/reduced_aminoacid_base_late.h
        reduced_aminoacid/reduced_aminoacid_cluster_red_base.h
        reduced_aminoacid/reduced_aminoacid_cluster_red_tables_20_to_n_b62.h
        reduced_aminoacid/reduced_aminoacid_cluster_red_tables_22_to_n_b62.h
        reduced_aminoacid/reduced_aminoacid_cluster_red_tables_24_to_n_b62.h
        reduced_aminoacid/reduced_aminoacid_murphy10_base.h
        reduced_aminoacid/reduced_aminoacid_murphy10_tables.h
        rna_io/bpseq_read_write.h
        rna_io/connect_read_write.h
        rna_io/dot_bracket_read_write.h
        rna_io/ebpseq_read_write.h
        rna_io/rna_header.h
        rna_io/rna_io_context.h
        rna_io/rna_record.h
        rna_io/rna_struct_file.h
        rna_io/stockholm_read_write.h
        rna_io/vienna_read_write.h
        roi_io/read_roi.h
        roi_io/roi_file.h
        roi_io/roi_io_context.h
        roi_io/roi_record.h
        roi_io/write_roi.h
        score/score_base.h
        score/score_edit.h
        score/score_matrix.h
        score/score_matrix_data.h
        score/score_matrix_dyn.h
        score/score_matrix_io.h
        score/score_simd_wrapper.h
        score/score_simple.h
        seeds/banded_chain_alignment.h
        seeds/banded_chain_alignment_impl.h
        seeds/banded_chain_alignment_profile.h
        seeds/banded_chain_alignment_scout.h
        seeds/banded_chain_alignment_traceback.h
        seeds/basic_iter_indirect.h
        seeds/seeds_base.h
        seeds/seeds_combination.h
        seeds/seeds_extension.h
        seeds/seeds_global_chaining.h
        seeds/seeds_global_chaining_base.h
        seeds/seeds_global_chaining_gusfield.h
        seeds/seeds_seed_base.h
        seeds/seeds_seed_chained.h
        seeds/seeds_seed_diagonal.h
        seeds/seeds_seed_set_base.h
        seeds/seeds_seed_set_non_scored.h
        seeds/seeds_seed_set_scored.h
        seeds/seeds_seed_set_unordered.h
        seeds/seeds_seed_simple.h
        seq_io/bam_sam.h
        seq_io/fai_index.h
        seq_io/fasta_fastq.h
        seq_io/genomic_region.h
        seq_io/read_embl.h
        seq_io/read_genbank.h
        seq_io/sequence_file.h
        sequence/adapt_array_pointer.h
        sequence/adapt_stl_container.h
        sequence/container_view.h
        sequence/container_view_zip.h
        sequence/iter_concat_virtual.h
        sequence/segment_base.h
        sequence/segment_infix.h
        sequence/segment_prefix.h
        sequence/segment_suffix.h
        sequence/segment_utils.h
        sequence/sequence_concatenator.h
        sequence/sequence_forwards.h
        sequence/sequence_interface.h
        sequence/sequence_lexical.h
        sequence/sequence_shortcuts.h
        sequence/string_alloc.h
        sequence/string_array.h
        sequence/string_base.h
        sequence/string_block.h
        sequence/string_cstyle.h
        sequence/string_packed.h
        sequence/string_packed_old.h
        sequence/string_set_base.h
        sequence/string_set_concat_direct.h
        sequence/string_set_dependent_generous.h
        sequence/string_set_dependent_tight.h
        sequence/string_set_owner.h
        sequence/string_set_segment.h
        sequence/string_set_view.h
        sequence_journaled/journal_entries_sorted_array.h
        sequence_journaled/journal_entry.h
        sequence_journaled/sequence_journaled.h
        sequence_journaled/sequence_journaled_iterator.h
        sequence_journaled/sequence_journaled_iterator_fast.h
        simple_intervals_io/simple_intervals_file.h
        simple_intervals_io/simple_intervals_io.h
        statistics/statistics_base.h
        statistics/statistics_markov_model.h
        store/store_align.h
        store/store_align_intervals.h
        store/store_all.h
        store/store_annotation.h
        store/store_base.h
        store/store_contig.h
        store/store_intervaltree.h
        store/store_io.h
        store/store_io_gff.h
        store/store_io_sam.h
        store/store_io_ucsc.h
        store/store_library.h
        store/store_matepair.h
        store/store_read.h
        stream/adapt_ios.h
        stream/buffered_stream.h
        stream/file_stream.h
        stream/formatted_file.h
        stream/guess_format.h
        stream/iostream_bgzf.h
        stream/iostream_bzip2.h
        stream/iostream_bzip2_impl.h
        stream/iostream_zip.h
        stream/iostream_zip_impl.h
        stream/iostream_zutil.h
        stream/iter_stream.h
        stream/lexical_cast.h
        stream/stream_base.h
        stream/stream_compressor.h
        stream/tokenization.h
        stream/virtual_stream.h
        system/file_async.h
        system/file_directory.h
        system/file_forwards.h
        system/file_sync.h
        system/system_base.h
        system/system_event_win.h
        system/system_forwards.h
        tabix_io/tabix_index_tbi.h
        translation/translation.h
        translation/translation_tables.h
        ucsc_io/ucsc_file.h
        ucsc_io/ucsc_io.h
        ucsc_io/ucsc_record.h
        vcf_io/read_vcf.h
        vcf_io/vcf_file.h
        vcf_io/vcf_header.h
        vcf_io/vcf_header_record.h
        vcf_io/vcf_io_context.h
        vcf_io/vcf_record.h
        vcf_io/write_vcf.h
        align.h
        align_extend.h
        align_profile.h
        align_split.h
        alignment_free.h
        arg_parse.h
        bam_io.h
        basic.h
        bed_io.h
        blast.h
        consensus.h
        file.h
        find.h
        gff_io.h
        graph_algorithms.h
        graph_align.h
        graph_msa.h
        graph_types.h
        index.h
        journaled_set.h
        journaled_string_tree.h
        map.h
        math.h
        modifier.h
        parallel.h
        parse_lm.h
        pipe.h
        platform.h
        random.h
        realign.h
        reduced_aminoacid.h
        rna_io.h
        roi_io.h
        score.h
        seeds.h
        seq_io.h
        sequence.h
        sequence_journaled.h
        simple_intervals_io.h
        statistics.h
        store.h
        stream.h
        system.h
        tabix_io.h
        translation.h
        ucsc_io.h
        vcf_io.h
        version.h)

add_executable(seqan ${SOURCE_FILES})